--- a/build.html
+++ b/build.html
@@ -49,7 +49,7 @@
     +-->
 <div class="searchbox">
 <form action="http://www.google.com/search" method="get" class="roundtopsmall">
-<input value="forrest.apache.org" name="sitesearch" type="hidden"><input onFocus="getBlank (this, 'Search the site:');" value="Search the site:" size="15" name="q" id="query" type="text">&nbsp; 
+<input value="forrest.apache.org" name="sitesearch" type="hidden"><input onFocus="getBlank (this, 'Search the site with :');" value="Search the site with :" size="25" name="q" id="query" type="text">&nbsp; 
                     <input name="Search" value="Search" type="submit">
 </form>
 </div>
@@ -130,7 +130,7 @@
 <div id="roundbottom">
 <img style="display: none" class="corner" height="15" width="15" alt="" src="skin/images/rc-b-l-15-1body-2menu-3menu.png"></div>
 <!--+
-  |alternativ credits
+  |alternative credits
   +-->
 </div>
 <!--+
@@ -141,8 +141,8 @@
     +-->
 <div id="content">
 <div id="skinconf-txtlink"></div>
-<div class="pdflink">
-<a class="dida" href="build.pdf"><img alt="PDF" src="skin/images/pdfdoc.gif" class="skin"><br>
+<div title="Portable Document Format" class="pdflink">
+<a class="dida" href="build.pdf"><img alt="PDF -icon" src="skin/images/pdfdoc.gif" class="skin"><br>
         PDF</a>
 </div>
 <div class="trail">
