--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     +-->
 <div class="searchbox">
 <form action="http://www.google.com/search" method="get" class="roundtopsmall">
-<input value="forrest.apache.org" name="sitesearch" type="hidden"><input onFocus="getBlank (this, 'Search the site:');" value="Search the site:" size="15" name="q" id="query" type="text">&nbsp; 
+<input value="forrest.apache.org" name="sitesearch" type="hidden"><input onFocus="getBlank (this, 'Search the site with :');" value="Search the site with :" size="25" name="q" id="query" type="text">&nbsp; 
                     <input name="Search" value="Search" type="submit">
 </form>
 </div>
@@ -154,7 +154,7 @@
 <div id="roundbottom">
 <img style="display: none" class="corner" height="15" width="15" alt="" src="skin/images/rc-b-l-15-1body-2menu-3menu.png"></div>
 <!--+
-  |alternativ credits
+  |alternative credits
   +-->
 </div>
 <!--+
@@ -165,8 +165,8 @@
     +-->
 <div id="content">
 <div id="skinconf-txtlink"></div>
-<div class="pdflink">
-<a class="dida" href="index.pdf"><img alt="PDF" src="skin/images/pdfdoc.gif" class="skin"><br>
+<div title="Portable Document Format" class="pdflink">
+<a class="dida" href="index.pdf"><img alt="PDF -icon" src="skin/images/pdfdoc.gif" class="skin"><br>
         PDF</a>
 </div>
 <div class="trail">
@@ -212,7 +212,7 @@
 <div class="section">
 <p>Apache Forrest is an XML standards-oriented documentation framework
         based on Apache Cocoon, providing XSLT stylesheets and schemas, images
-        and other resources. Forrest uses these to render the XML source
+        and other resources. Forrest uses these to render the source
         content into a website via command-line, robot, or a dynamic web
         application.
       </p>
@@ -458,7 +458,7 @@ document.write("Last Published: " + document.lastModified);
 <div class="copyright">
  Copyright &copy; 2002-2004 The Apache Software Foundation.</div>
 <div id="logos">
-<a href="http://validator.w3.org/check/referer"><img style="height: 31px; width: 88px;" alt="Valid HTML 4.01!" src="skin/images/valid-html401.png" class="logoImage"></a><a href="http://jigsaw.w3.org/css-validator/"><img style="height: 31px; width: 88px;" alt="Valid CSS!" src="skin/images/vcss.png" class="logoImage"></a><a href="http://forrest.apache.org/"><img border="0" alt="Built with Apache Forrest logo" src="skin/images/built-with-forrest-button.png" style="width: 88px;height: 31px;"></a><a href="http://cocoon.apache.org/"><img border="0" alt="Built with Apache Cocoon logo" src="images/built-with-cocoon.gif" style="width: 88px;height: 31px;"></a><a href="http://www.apache.org/foundation/thanks.html"><img border="0" alt="thanks to ASF, thanks from ASF logo" src="images/icon.png" style="width: 26px;height: 22px;"></a>
+<a href="http://validator.w3.org/check/referer"><img style="height: 31px; width: 88px;" alt="Valid HTML 4.01!" src="skin/images/valid-html401.png" class="logoImage"></a><a href="http://jigsaw.w3.org/css-validator/"><img style="height: 31px; width: 88px;" alt="Valid CSS!" src="skin/images/vcss.png" class="logoImage"></a><a href="http://forrest.apache.org/"><img border="0" title="Built with Apache Forrest" alt="Built with Apache Forrest - logo" src="skin/images/built-with-forrest-button.png" style="width: 88px;height: 31px;"></a><a href="http://cocoon.apache.org/"><img border="0" title="Built with Apache Cocoon" alt="Built with Apache Cocoon - logo" src="images/built-with-cocoon.gif" style="width: 88px;height: 31px;"></a><a href="http://www.apache.org/foundation/thanks.html"><img border="0" title="thanks to ASF, thanks from ASF" alt="thanks to ASF, thanks from ASF - logo" src="images/icon.png" style="width: 26px;height: 22px;"></a>
 </div>
 <!--+
     |end bottomstrip
