--- a/menu-index.html
+++ b/menu-index.html
@@ -10,7 +10,7 @@
 </li>
     
 <li>
-<a href="license.html" title="Apache License 2.0">License</a>
+<a href="license.html">License</a>
 </li>
     
 <li>
