--- a/body-index.html
+++ b/body-index.html
@@ -41,7 +41,7 @@
 <div class="section">
 <p>Apache Forrest is an XML standards-oriented documentation framework
         based on Apache Cocoon, providing XSLT stylesheets and schemas, images
-        and other resources. Forrest uses these to render the XML source
+        and other resources. Forrest uses these to render the source
         content into a website via command-line, robot, or a dynamic web
         application.
       </p>
