Simpler sitemap match for the demo. Anyway, it didn't work :-)
git-svn-id: https://svn.apache.org/repos/asf/forrest/site@51831 13f79535-47bb-0310-9956-ffa450edef68

--- a/faq.html
+++ b/faq.html
@@ -1004,11 +1004,11 @@ X [0]                       brokenlink.html     BROKEN: reason
 &lt;map:sitemap xmlns:map="http://apache.org/cocoon/sitemap/1.0"&gt;
  &lt;map:pipelines&gt;
   &lt;map:pipeline&gt;
-    &lt;map:match pattern="**/resolver-*.html"&gt;
-      &lt;map:generate src="{project:content.xdocs}{1}/resolver-{2}.xml"/&gt;
-      &lt;map:transform
-          src="file:///usr/share/sgml/docbook/xsl/xhtml/docbook.xsl"/&gt;
-      &lt;map:serialize/&gt;
+   &lt;map:match pattern="resolver-*.html"&gt;
+    &lt;map:generate src="{project:content.xdocs}resolver-{1}.xml"/&gt;
+    &lt;map:transform
+      src="file:///usr/share/sgml/docbook/xsl-stylesheets/xhtml/docbook.xsl"/&gt;
+    &lt;map:serialize type="xml"/&gt;
    &lt;/map:match&gt;
   &lt;/map:pipeline&gt;
  &lt;/map:pipelines&gt;
