--- a/faq.html
+++ b/faq.html
@@ -1008,7 +1008,7 @@ X [0]                       brokenlink.html     BROKEN: reason
     &lt;map:generate src="{project:content.xdocs}resolver-{1}.xml"/&gt;
     &lt;map:transform
       src="file:///usr/share/sgml/docbook/xsl-stylesheets/xhtml/docbook.xsl"/&gt;
-    &lt;map:serialize type="xml"/&gt;
+    &lt;map:serialize type="xhtml"/&gt;
    &lt;/map:match&gt;
   &lt;/map:pipeline&gt;
  &lt;/map:pipelines&gt;
