Synchronise the descriptions of Forrest.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@53934 13f79535-47bb-0310-9956-ffa450edef68

--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@ Please note that this HTML file was _not_ created by Forrest.
    <hr />
 
    <h2>What is this?</h2>
-   <p>Apache Forrest is an XML standards-oriented documentation framework 
-      based on Apache Cocoon, providing XSLT stylesheets and schemas, images 
-      and other resources. Forrest uses these to render the XML source content 
-      into a website via command-line, robot, or a dynamic web application.</p>
+   <p>Apache Forrest is an XML standards-oriented documentation framework
+     based upon Apache Cocoon, providing XSLT stylesheets and schemas,
+     images and other resources. Forrest uses these to render the source
+     content into a website via command-line, robot, or dynamic application.
+   </p>
 
    <h2>What do I do now?</h2>
    <p>With a downloaded distribution, Forrest is already built. Just set the
