Emphasise that the source code is included, but the distribution is pre-built.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@53956 13f79535-47bb-0310-9956-ffa450edef68

--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@ Please note that this HTML file was _not_ created by Forrest.
    <h2>What do I do now?</h2>
    <p>With a downloaded distribution, Forrest is already built. Just set the
      environment variables for convenience: FORREST_HOME to point to src/core
-     and add FORREST_HOME/bin to your PATH.
+     and add FORREST_HOME/bin to your PATH. That is it, ready.
    </p>
-   <p>The source code is also provided, so you can change it and re-build
-      by typing <tt>'build.bat'</tt> (Windows)
+   <p>The source code is also provided, so you can alter it or extend it,
+      and then re-build by doing
+      <tt>'build.bat'</tt> (Windows)
       or <tt>'./build.sh'</tt> (Unix).
       If you need more instructions, then see the
       <a href="http://forrest.apache.org/build.html">Building Forrest</a>
