Add a note that the up-to-date documentation is at the website.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@54143 13f79535-47bb-0310-9956-ffa450edef68

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Please note that this HTML file was _not_ created by Forrest.
       Point your web browser to the index.html file.
    </p>
 
-    <h3>Run a webapp of the Forrest site</h3>
+    <h3>Run a webapp of the Apache Forrest site</h3>
     <p>Type <tt>'forrest run'</tt> in this top-level directory.
       You can then point your browser to 
       <a href="http://localhost:8888/">http://localhost:8888/</a>
@@ -88,6 +88,10 @@ Please note that this HTML file was _not_ created by Forrest.
   <p>
   Type 'forrest -projecthelp' to list the available Forrest commands.
   NOTE: use the 'forrest.bat' version when running under Cygwin!
+  </p>
+
+  <p>Your distribution has a copy of the Apache Forrest core documentation.
+  Refer to the online or SVN version for the up-to-date documentation.
   </p>
 
    <p>For further information please read our 
