Proposal for ASF-wide documentation staging and publishing Proposal for ASF-wide Forrestbot
git-svn-id: https://svn.apache.org/repos/asf/forrest/site@55609 13f79535-47bb-0310-9956-ffa450edef68

--- a/forrest-issues.html
+++ b/forrest-issues.html
@@ -126,6 +126,15 @@
 <div class="menupagetitle">Open Issues</div>
 </div>
 </div>
+<div onclick="SwitchMenu('menu_1.2', 'skin/')" id="menu_1.2Title" class="menutitle">Proposals</div>
+<div id="menu_1.2" class="menuitemgroup">
+<div class="menuitem">
+<a title="" href="proposal-asf-publish.html">ASF Publishing</a>
+</div>
+<div class="menuitem">
+<a title="" href="proposal-asf-forrestbot.html">ASF Forrestbot</a>
+</div>
+</div>
 <div id="credit"></div>
 <div id="roundbottom">
 <img style="display: none" class="corner" height="15" width="15" alt="" src="skin/images/rc-b-l-15-1body-2menu-3menu.png"></div>
