--- a/linkmap.html
+++ b/linkmap.html
@@ -288,8 +288,17 @@
 <a title="" href="forrest-issues.html">Open Issues</a>
 </div>
 </div>
-<div onclick="SwitchMenu('menu_1.8', 'skin/')" id="menu_1.8Title" class="menutitle">Related projects</div>
+<div onclick="SwitchMenu('menu_1.8', 'skin/')" id="menu_1.8Title" class="menutitle">Proposals</div>
 <div id="menu_1.8" class="menuitemgroup">
+<div class="menuitem">
+<a title="" href="proposal-asf-publish.html">ASF Publishing</a>
+</div>
+<div class="menuitem">
+<a title="" href="proposal-asf-forrestbot.html">ASF Forrestbot</a>
+</div>
+</div>
+<div onclick="SwitchMenu('menu_1.9', 'skin/')" id="menu_1.9Title" class="menutitle">Related projects</div>
+<div id="menu_1.9" class="menuitemgroup">
 <div class="menuitem">
 <a title="" href="http://gump.apache.org/">Apache Gump</a>
 </div>
@@ -682,6 +691,22 @@
 
 
 
+  
+</ul>
+
+  
+<li>
+<a href="">Proposals</a>&nbsp;&nbsp;&nbsp;_________________________&nbsp;&nbsp;<em>proposals</em>
+</li>
+<ul>
+    
+<li>
+<a href="proposal-asf-publish.html">ASF Publishing</a>&nbsp;&nbsp;&nbsp;_________________________&nbsp;&nbsp;<em>asf-publishing</em>
+</li>
+    
+<li>
+<a href="proposal-asf-forrestbot.html">ASF Forrestbot</a>&nbsp;&nbsp;&nbsp;_________________________&nbsp;&nbsp;<em>asf-forrestbot</em>
+</li>
   
 </ul>
 
