--- a/mail-lists.html
+++ b/mail-lists.html
@@ -126,6 +126,15 @@
 <a title="" href="forrest-issues.html">Open Issues</a>
 </div>
 </div>
+<div onclick="SwitchMenu('menu_1.2', 'skin/')" id="menu_1.2Title" class="menutitle">Proposals</div>
+<div id="menu_1.2" class="menuitemgroup">
+<div class="menuitem">
+<a title="" href="proposal-asf-publish.html">ASF Publishing</a>
+</div>
+<div class="menuitem">
+<a title="" href="proposal-asf-forrestbot.html">ASF Forrestbot</a>
+</div>
+</div>
 <div id="credit"></div>
 <div id="roundbottom">
 <img style="display: none" class="corner" height="15" width="15" alt="" src="skin/images/rc-b-l-15-1body-2menu-3menu.png"></div>
