update build from SVN instructions
git-svn-id: https://svn.apache.org/repos/asf/forrest/site@55738 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.html
+++ b/build.html
@@ -230,7 +230,8 @@
 <h2 class="underlined_10">Building and Installing Forrest</h2>
 <div class="section">
 <p>
-       To build Forrest, type '<span class="codefrag">build</span>' on Windows, or '<span class="codefrag">./build.sh</span>' on
+       To build Forrest, change directory to '<span class="codefrag">forrest/forrestcore</span>', and
+       then type '<span class="codefrag">build</span>' on Windows or '<span class="codefrag">./build.sh</span>' on
        Unix. If everything is successful, you should see a message like this:
      </p>
 <pre class="code">
@@ -252,8 +253,8 @@
        command is available everywhere:
      </p>
 <pre class="code">
-~/apache/forrest$ export FORREST_HOME=`pwd`/src/core
-~/apache/forrest$ export PATH=$PATH:$FORREST_HOME/bin
+~/forrest/forrestcore$ export FORREST_HOME=`pwd`/src/core
+~/forrest/forrestcore$ export PATH=$PATH:$FORREST_HOME/bin
      </pre>
 <p>
        After updating the Forrest source from SVN if there have been certain types of
@@ -262,7 +263,7 @@
 </div>
 
   
-<a name="N1008D"></a><a name="run"></a>
+<a name="N10090"></a><a name="run"></a>
 <h2 class="underlined_10">Run Forrest, run!</h2>
 <div class="section">
 <p>Forrest is now ready to go. Type '<span class="codefrag">forrest run</span>' to see
