Commence the massive task of updating docs following the necessary SVN restructure.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@56333 13f79535-47bb-0310-9956-ffa450edef68

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Please note that this HTML file was _not_ created by Forrest.
    </head>
 
    <body>
-   <img src="src/documentation/resources/images/apache-forrest.png" alt="forrest" />
+   <img src="site/resources/images/apache-forrest.png" alt="forrest" />
    <br />
    <a href="http://www.apache.org/" class="title">Apache</a>
    &gt;<a href="http://xml.apache.org/" class="title">XML</a>
@@ -40,34 +40,35 @@ Please note that this HTML file was _not_ created by Forrest.
 
    <h2>What do I do now?</h2>
    <p>With a downloaded distribution, Forrest is already built. Just set the
-     environment variables for convenience: FORREST_HOME to point to src/core
+     environment variables for convenience: FORREST_HOME to refer to this
+     top-level of the distribution
      and add FORREST_HOME/bin to your PATH. That is it, ready.
    </p>
    <p>The source code is also provided, so you can alter it or extend it,
       and then re-build by doing
-      <tt>'build.bat'</tt> (Windows)
-      or <tt>'./build.sh'</tt> (Unix).
+      <tt>'main\build.bat'</tt> (Windows)
+      or <tt>'main/build.sh'</tt> (Unix).
       If you need more instructions, then see the
       <a href="http://forrest.apache.org/build.html">Building Forrest</a>
       document.
    </p>
 
    <p>Forrest is ready to go! Here are some things to try ...</p>
+
+    <h3>Run a webapp of the Apache Forrest site</h3>
+    <p>Type <tt>'forrest run'</tt> in this top-level directory.
+      You can then point your browser to 
+      <a href="http://localhost:8888/">http://localhost:8888/</a>
+      and view the Forrest documentation generated dynamically.
+     </p>
    
    <h3>Render the Forrest core documentation</h3>
    <p>Simply type <tt>'forrest'</tt> in this
       top-level directory. This will render the HTML and PDFs for the Forrest
       documentation into the
       <tt>build/site/</tt> directory.
-      Point your web browser to the index.html file.
+      Point your web browser to the index.html file there.
    </p>
-
-    <h3>Run a webapp of the Apache Forrest site</h3>
-    <p>Type <tt>'forrest run'</tt> in this top-level directory.
-      You can then point your browser to 
-      <a href="http://localhost:8888/">http://localhost:8888/</a>
-      and view the Forrest website generated dynamically.
-     </p>
 
       <h3>Generate your own site</h3>
       <p>Create a new (empty) directory in your home space, cd to it, and type
@@ -94,12 +95,12 @@ Please note that this HTML file was _not_ created by Forrest.
   Refer to the online or SVN version for the up-to-date documentation.
   </p>
 
-   <p>For further information please read our 
-   <a href="http://forrest.apache.org/docs/your-project.html">Getting Started</a>
+   <p>For further information please read the 
+   <a href="http://localhost:8888/docs/your-project.html">Using Forrest</a>
    guide. If you have any questions or suggestions, please subscribe to the 
    <a href="http://forrest.apache.org/mail-lists.html">Forrest mailing lists</a>.</p>
 
-   <p>Thanks for using Apache Forrest!</p>
+   <p>Thanks for using Apache Forrest.</p>
 
    <hr />
 
