Something wrong with the build script. Need to 'cd main' first.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@56356 13f79535-47bb-0310-9956-ffa450edef68

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ Please note that this HTML file was _not_ created by Forrest.
    </p>
    <p>The source code is also provided, so you can alter it or extend it,
       and then re-build by doing
-      <tt>'main\build.bat'</tt> (Windows)
-      or <tt>'main/build.sh'</tt> (Unix).
+      <tt>'cd main; build.bat'</tt> (Windows)
+      or <tt>'cd main; ./build.sh'</tt> (Unix).
       If you need more instructions, then see the
       <a href="http://forrest.apache.org/build.html">Building Forrest</a>
       document.
