new "howto-corner-images".
git-svn-id: https://svn.apache.org/repos/asf/forrest/site@56726 13f79535-47bb-0310-9956-ffa450edef68

--- a/howto/howto-pdf-tab.html
+++ b/howto/howto-pdf-tab.html
@@ -119,6 +119,9 @@
 <div class="menupage">
 <div class="menupagetitle">Create tab PDF</div>
 </div>
+<div class="menuitem">
+<a title="" href="../howto/howto-corner-images.html">CSS corner SVG</a>
+</div>
 </div>
 <div id="credit"></div>
 <div id="roundbottom">
