--- a/howto/index.html
+++ b/howto/index.html
@@ -119,6 +119,9 @@
 <div class="menuitem">
 <a title="" href="../howto/howto-pdf-tab.html">Create tab PDF</a>
 </div>
+<div class="menuitem">
+<a title="" href="../howto/howto-corner-images.html">CSS corner SVG</a>
+</div>
 </div>
 <div id="credit"></div>
 <div id="roundbottom">
@@ -166,6 +169,13 @@
 <a href="../howto/howto-pdf-tab.html">How to create a PDF document for each tab</a>
         - Describes the generation of a PDF document for each
         group of documents that is defined by a tab.
+      </li>
+      
+<li>
+<a href="../howto/howto-corner-images.html">How to modify the color of generated corner images</a>
+        - Describes the use of CSS values from the skinconf.xml configuration
+        file to change the color of the corner images to be suitable for
+        your own skin colors. Advanced use explains editing the *.css too.
       </li>
     
 </ul>
