--- a/howto/howto-howto.html
+++ b/howto/howto-howto.html
@@ -119,6 +119,9 @@
 <div class="menuitem">
 <a title="" href="../howto/howto-pdf-tab.html">Create tab PDF</a>
 </div>
+<div class="menuitem">
+<a title="" href="../howto/howto-corner-images.html">CSS corner SVG</a>
+</div>
 </div>
 <div id="credit"></div>
 <div id="roundbottom">
