--- a/plugins/org.apache.forrest.plugin.htmlArea/src/documentation/content/xdocs/index.html
+++ b/plugins/org.apache.forrest.plugin.htmlArea/src/documentation/content/xdocs/index.html
@@ -6,13 +6,18 @@
   </head>
   <body>
     <h1>WYSIWYG Editing In Apache Forrest</h1>
-    <p>This plugin provides <span style="font-style: italic;">WYSIWYG</span> editing for the Apache Forrest appliction. It currently only works with HTML input files, but we hope to extend its range of supported file formats.</p>
+    <p>This plugin provides <span style="font-style: italic;">WYSIWYG</span> editing for the Apache Forrest appliction. 
+    It currently only works with HTML input files, but we hope to extend its range of supported file formats.</p>
+    
+    <p>This plugin uses <a href="http://sourceforge.net/projects/itools-htmlarea/">HTML Area</a> for
+    the editing widget.</p>
+    
     <h2>Try it out</h2>
-    <p>The easiest way to try it out is to <a href="edit_htmlArea/index.html" shape="rect">edit this page</a>.</p>
+    <p>The easiest way to try it out is to <a href="/edit_htmlArea/index.html" shape="rect">edit this page</a>.</p>
     <h1>How do I allow users to edit my Pages?</h1>
     <p>If a request is recieved with an URL that contains "edit_htmlArea/" then an edit page is generated for the indicated page. For example:</p>
     <p class="source">
-      <a href="edit_htmlArea/index.html">edit index</a>
+      <a href="/edit_htmlArea/index.html">edit index</a>
     </p>
     <p>will create an editor for the <code>index.html</code> page.</p>
   </body>
