correct instructions for viewing local documentation (thanks to Charles Palmer)
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@109813 13f79535-47bb-0310-9956-ffa450edef68

--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@ Please note that this HTML file was _not_ created by Forrest.
 
    <p>Forrest is ready to go! Here are some things to try ...</p>
 
-    <h3>Run a webapp of the Apache Forrest site</h3>
-    <p>Type <tt>'forrest run'</tt> in this top-level directory.
+    <h3>Run a webapp of the Apache Forrest documentation</h3>
+    <p>Type <tt>'forrest run'</tt> in the <code>docs-author</code> directory.
       You can then point your browser to 
       <a href="http://localhost:8888/">http://localhost:8888/</a>
       and view the Forrest documentation generated dynamically.
      </p>
    
    <h3>Render the Forrest core documentation</h3>
-   <p>Simply type <tt>'forrest'</tt> in this
-      top-level directory. This will render the HTML and PDFs for the Forrest
+   <p>Simply type <tt>'forrest'</tt> in the
+      <code>docs-author</code> directory. This will render the HTML and PDFs for the Forrest
       documentation into the
       <tt>build/site/</tt> directory.
       Point your web browser to the index.html file there.
