remove links to editor page
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@109947 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/org.apache.forrest.plugin.htmlArea/src/documentation/content/xdocs/index.html
+++ b/plugins/org.apache.forrest.plugin.htmlArea/src/documentation/content/xdocs/index.html
@@ -13,11 +13,10 @@
     the editing widget.</p>
     
     <h2>Try it out</h2>
-    <p>The easiest way to try it out is to <a href="/edit_htmlArea/index.html" shape="rect">edit this page</a>.</p>
     <h1>How do I allow users to edit my Pages?</h1>
     <p>If a request is recieved with an URL that contains "edit_htmlArea/" then an edit page is generated for the indicated page. For example:</p>
     <p class="source">
-      <a href="/edit_htmlArea/index.html">edit index</a>
+      @lt;a href="/edit_htmlArea/index.html"@gt;edit index&lt;/a&gt;
     </p>
     <p>will create an editor for the <code>index.html</code> page.</p>
   </body>
