add a warning that source created by this plugin is currently mixing style and content
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@111277 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/org.apache.forrest.plugin.htmlArea/src/documentation/content/xdocs/index.html
+++ b/plugins/org.apache.forrest.plugin.htmlArea/src/documentation/content/xdocs/index.html
@@ -12,6 +12,11 @@
     <p>This plugin uses <a href="http://sourceforge.net/projects/itools-htmlarea/">HTML Area</a> for
     the editing widget.</p>
     
+    <warning>With the current configuration this plugin produces HTML with
+    embedded stule information (not just CSS stuff). A future version will only 
+    use CSS styling, but for now be ware that the source can be bad from a 
+    separation of content and style perspective</warning>
+    
     <h2>Try it out</h2>
     <h1>How do I allow users to edit my Pages?</h1>
     <p>If a request is recieved with an URL that contains "edit_htmlArea/" then an edit page is generated for the indicated page. For example:</p>
