Publish the "Project guidelines".
git-svn-id: https://svn.apache.org/repos/asf/forrest/site@152645 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib.html
+++ b/contrib.html
@@ -125,6 +125,9 @@
 <div class="menuitem">
 <a title="" href="http://brutus.apache.org/gump/public/forrest/">Gump Integration</a>
 </div>
+<div class="menuitem">
+<a title="" href="guidelines.html">Project guidelines</a>
+</div>
 </div>
 <div onclick="SwitchMenu('menu_1.2', 'skin/')" id="menu_1.2Title" class="menutitle">Proposals</div>
 <div id="menu_1.2" class="menuitemgroup">
