--- a/mail-lists.html
+++ b/mail-lists.html
@@ -125,6 +125,9 @@
 <div class="menuitem">
 <a title="" href="http://brutus.apache.org/gump/public/forrest/">Gump Integration</a>
 </div>
+<div class="menuitem">
+<a title="" href="guidelines.html">Project guidelines</a>
+</div>
 </div>
 <div onclick="SwitchMenu('menu_1.2', 'skin/')" id="menu_1.2Title" class="menutitle">Proposals</div>
 <div id="menu_1.2" class="menuitemgroup">
