--- a/proposal-asf-publish.html
+++ b/proposal-asf-publish.html
@@ -125,6 +125,9 @@
 <div class="menuitem">
 <a title="" href="http://brutus.apache.org/gump/public/forrest/">Gump Integration</a>
 </div>
+<div class="menuitem">
+<a title="" href="guidelines.html">Project guidelines</a>
+</div>
 </div>
 <div onclick="SwitchMenu('menu_selected_1.2', 'skin/')" id="menu_selected_1.2Title" class="menutitle" style="background-image: url('skin/images/chapter_open.gif');">Proposals</div>
 <div id="menu_selected_1.2" class="selectedmenuitemgroup" style="display: block;">
