Update build instructions.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@160994 13f79535-47bb-0310-9956-ffa450edef68

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <!--
-  Copyright 2002-2004 The Apache Software Foundation or its licensors,
+  Copyright 2002-2005 The Apache Software Foundation or its licensors,
   as applicable.
 
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -50,14 +50,14 @@ Please note that this HTML file was _not_ created by Forrest.
       <tt>'cd main; build.bat'</tt> (Windows)
       or <tt>'cd main; ./build.sh'</tt> (Unix).
       If you need more instructions, then see the
-      <a href="http://forrest.apache.org/build.html">Building Forrest</a>
+      <a href="http://forrest.apache.org/docs/build.html">Building Forrest</a>
       document.
    </p>
 
    <p>Forrest is ready to go! Here are some things to try ...</p>
 
     <h3>Run a webapp of the Apache Forrest documentation</h3>
-    <p>Type <tt>'forrest run'</tt> in the <code>docs-author</code> directory.
+    <p>Type <tt>'forrest run'</tt> in the <code>site-author</code> directory.
       You can then point your browser to 
       <a href="http://localhost:8888/">http://localhost:8888/</a>
       and view the Forrest documentation generated dynamically.
@@ -65,7 +65,8 @@ Please note that this HTML file was _not_ created by Forrest.
    
    <h3>Render the Forrest core documentation</h3>
    <p>Simply type <tt>'forrest'</tt> in the
-      <code>docs-author</code> directory. This will render the HTML and PDFs for the Forrest
+      <code>site-author</code> directory. This will render all of the HTML
+      and PDFs for the Forrest
       documentation into the
       <tt>build/site/</tt> directory.
       Point your web browser to the index.html file there.
@@ -105,6 +106,6 @@ Please note that this HTML file was _not_ created by Forrest.
 
    <hr />
 
-   <p>Copyright 2002-2004 Apache Software Foundation. All rights reserved.</p>
+   <p>Copyright 2002-2005 Apache Software Foundation. All rights reserved.</p>
   </body>
 </html>
