Recent generated changes.
git-svn-id: https://svn.apache.org/repos/asf/forrest/site@161007 13f79535-47bb-0310-9956-ffa450edef68

--- a/0.7/index.html
+++ b/0.7/index.html
@@ -394,7 +394,7 @@
         including the latest release, the current development, and past releases.
         All versions of Forrest include their own copy of the documentation.
         To view it, do '<a href="http://forrest.apache.org/docs/../build.html#run">forrest run</a>' and go to
-        http://127.0.0.1:8888/  (for versions after 0.6, do 'cd docs-author' first).
+        http://127.0.0.1:8888/  (for versions after 0.6, do 'cd site-author' first).
         The <a href="http://forrest.apache.org/">Apache Forrest website</a> is updated
         manually as needed, while we develop the 
         <a href="proposal-asf-forrestbot.html">forrestbot</a> deployment facility.
