Update with recent changes.
git-svn-id: https://svn.apache.org/repos/asf/forrest/site@161027 13f79535-47bb-0310-9956-ffa450edef68

--- a/0.7/contrib.html
+++ b/0.7/contrib.html
@@ -400,8 +400,8 @@
         
 <li> When making changes to XML documentation, or any XML document for
           that matter, use a validating XML editor. Here is some assistance
-          with editor 
-          <a href="http://forrest.apache.org/docs/catalog.html">configuration</a>.
+          with editor
+          <a href="docs/catalog.html">configuration</a>.
         </li>
       
 <li> Remember that most people are participating in development on a
