--- a/0.7/flyer.html
+++ b/0.7/flyer.html
@@ -208,7 +208,7 @@
       
 <li>Multiple task-specific source XML formats can be used
        (<a href="docs/howto/">How-To</a>,
-        <a href="http://forrest.apache.org/docs/faq.html"><acronym title="Frequently Asked Questions">FAQ</acronym></a>,
+        <a href="docs/faq.html"><acronym title="Frequently Asked Questions">FAQ</acronym></a>,
         <a href="docs/changes.html">changelogs</a> and
         <a href="docs/todo.html">todo lists</a> supported natively).
         Source formats include: Apache xdocs xml format, plain html
