--- a/0.7/index.html
+++ b/0.7/index.html
@@ -290,7 +290,7 @@
         
 <li>Multiple task-specific source XML formats can be used
          (<a href="docs/howto/">How-To</a>,
-          <a href="http://forrest.apache.org/docs/faq.html"><acronym title="Frequently Asked Questions">FAQ</acronym></a>,
+          <a href="docs/faq.html"><acronym title="Frequently Asked Questions">FAQ</acronym></a>,
           <a href="docs/changes.html">changelogs</a> and
           <a href="docs/todo.html">todo lists</a> supported natively).
           Source formats include: Apache xdocs xml format, plain html
@@ -393,7 +393,7 @@
         <a href="docs/../docs.html">various versions</a>
         including the latest release, the current development, and past releases.
         All versions of Forrest include their own copy of the documentation.
-        To view it, do '<a href="http://forrest.apache.org/docs/../build.html#run">forrest run</a>' and go to
+        To view it, do '<a href="docs/build.html#run">forrest run</a>' and go to
         http://127.0.0.1:8888/  (for versions after 0.6, do 'cd site-author' first).
         The <a href="http://forrest.apache.org/">Apache Forrest website</a> is updated
         manually as needed, while we develop the 
