--- a/0.7/mail-lists.html
+++ b/0.7/mail-lists.html
@@ -195,7 +195,7 @@
 <ul> 
         
 <li>
-<a href="http://forrest.apache.org/docs/faq.html">Forrest FAQs</a>
+<a href="docs/faq.html">Forrest FAQs</a>
 </li> 
         
 <li>
