Publish recent changes.
git-svn-id: https://svn.apache.org/repos/asf/forrest/site@161382 13f79535-47bb-0310-9956-ffa450edef68

--- a/0.7/contrib.html
+++ b/0.7/contrib.html
@@ -73,6 +73,9 @@
 <li>
 <a class="base-not-selected" href="docs/howto/index.html">0.7 How-To</a>
 </li>
+<li>
+<a class="base-not-selected" href="docs/plugins/index.html">0.7 Plugins</a>
+</li>
 </ul>
 <!--+
     |end Tabs
@@ -121,7 +124,7 @@
 <a title="" href="http://issues.cocoondev.org/secure/BrowseProject.jspa?id=10000">Bugs and Issues</a>
 </div>
 <div class="menuitem">
-<a title="" href="forrest-issues.html">Open Issues</a>
+<a title="" href="forrest-issues.html">Release Issues</a>
 </div>
 <div class="menuitem">
 <a title="" href="http://brutus.apache.org/gump/public/forrest/">Gump Integration</a>
