--- a/0.7/flyer.html
+++ b/0.7/flyer.html
@@ -73,6 +73,9 @@
 <li>
 <a class="base-not-selected" href="docs/howto/index.html">0.7 How-To</a>
 </li>
+<li>
+<a class="base-not-selected" href="docs/plugins/index.html">0.7 Plugins</a>
+</li>
 </ul>
 <!--+
     |end Tabs
@@ -225,7 +228,7 @@
       
 <li>
         Transparent inclusion and aggregation of external content, like
-        <a href="http://forrest.apache.org/docs/changes.rss">RSS feeds</a>.
+        <a href="docs/changes.rss">RSS feeds</a>.
       </li>
       
 <li>
