--- a/0.7/live-sites.html
+++ b/0.7/live-sites.html
@@ -73,6 +73,9 @@
 <li>
 <a class="base-not-selected" href="docs/howto/index.html">0.7 How-To</a>
 </li>
+<li>
+<a class="base-not-selected" href="docs/plugins/index.html">0.7 Plugins</a>
+</li>
 </ul>
 <!--+
     |end Tabs
