Publish recent changes.
git-svn-id: https://svn.apache.org/repos/asf/forrest/site@161654 13f79535-47bb-0310-9956-ffa450edef68

--- a/0.7/guidelines.html
+++ b/0.7/guidelines.html
@@ -112,22 +112,22 @@
 <div onclick="SwitchMenu('menu_selected_1.1', 'skin/')" id="menu_selected_1.1Title" class="menutitle" style="background-image: url('skin/images/chapter_open.gif');">Getting Involved</div>
 <div id="menu_selected_1.1" class="selectedmenuitemgroup" style="display: block;">
 <div class="menuitem">
-<a title="" href="contrib.html">Contributing</a>
+<a href="contrib.html">Contributing</a>
 </div>
 <div class="menuitem">
-<a title="" href="http://svn.apache.org/viewcvs.cgi/forrest/trunk/">Browse SVN</a>
+<a href="http://svn.apache.org/viewcvs.cgi/forrest/trunk/">Browse SVN</a>
 </div>
 <div class="menuitem">
-<a title="" href="mail-lists.html">Mail lists</a>
+<a href="mail-lists.html">Mail lists</a>
 </div>
 <div class="menuitem">
-<a title="" href="http://issues.cocoondev.org/secure/BrowseProject.jspa?id=10000">Bugs and Issues</a>
+<a href="http://issues.cocoondev.org/secure/BrowseProject.jspa?id=10000">Bugs and Issues</a>
 </div>
 <div class="menuitem">
-<a title="" href="forrest-issues.html">Release Issues</a>
+<a href="forrest-issues.html">Release Issues</a>
 </div>
 <div class="menuitem">
-<a title="" href="http://brutus.apache.org/gump/public/forrest/">Gump Integration</a>
+<a href="http://brutus.apache.org/gump/public/forrest/">Gump Integration</a>
 </div>
 <div class="menupage">
 <div class="menupagetitle">Project guidelines</div>
@@ -136,16 +136,16 @@
 <div onclick="SwitchMenu('menu_1.2', 'skin/')" id="menu_1.2Title" class="menutitle">Proposals</div>
 <div id="menu_1.2" class="menuitemgroup">
 <div class="menuitem">
-<a title="" href="proposal-asf-publish.html">ASF Publishing</a>
+<a href="proposal-asf-publish.html">ASF Publishing</a>
 </div>
 <div class="menuitem">
-<a title="" href="proposal-asf-forrestbot.html">ASF Forrestbot</a>
+<a href="proposal-asf-forrestbot.html">ASF Forrestbot</a>
 </div>
 </div>
 <div id="credit">
 <hr>
     This is documentation for current release v0.7
-   (<a href="http://forrest.apache.org/docs.html">More</a> ...)</div>
+   (<a href="http://forrest.apache.org/docs.html">More</a>)</div>
 <div id="roundbottom">
 <img style="display: none" class="corner" height="15" width="15" alt="" src="skin/images/rc-b-l-15-1body-2menu-3menu.png"></div>
 <!--+
@@ -172,7 +172,7 @@
 <h1>Apache Forrest project guidelines</h1>
 <div id="motd-area">
     This is documentation for current release v0.7
-   (<a href="http://forrest.apache.org/docs.html">More</a> ...)</div>
+   (<a href="http://forrest.apache.org/docs.html">More</a>)</div>
 <div id="minitoc-area">
 <ul class="minitoc">
 <li>
