--- a/0.7/who.html
+++ b/0.7/who.html
@@ -112,46 +112,43 @@
 <div onclick="SwitchMenu('menu_selected_1.1', 'skin/')" id="menu_selected_1.1Title" class="menutitle" style="background-image: url('skin/images/chapter_open.gif');">About</div>
 <div id="menu_selected_1.1" class="selectedmenuitemgroup" style="display: block;">
 <div class="menuitem">
-<a title="" href="index.html">Index</a>
+<a href="index.html">Index</a>
 </div>
 <div class="menuitem">
-<a title="" href="license.html">License</a>
+<a href="license.html">License</a>
 </div>
 <div class="menuitem">
-<a title="" href="http://forrest.apache.org/mirrors.cgi">Download</a>
+<a href="http://forrest.apache.org/mirrors.cgi">Download</a>
 </div>
 <div class="menupage">
 <div class="menupagetitle">Who we are</div>
 </div>
 <div class="menuitem">
-<a title="" href="flyer.html">Flyer</a>
+<a href="flyer.html">Flyer</a>
 </div>
 <div class="menuitem">
-<a title="" href="live-sites.html">Example sites</a>
+<a href="live-sites.html">Example sites</a>
 </div>
 </div>
 <div onclick="SwitchMenu('menu_1.2', 'skin/')" id="menu_1.2Title" class="menutitle">Related projects</div>
 <div id="menu_1.2" class="menuitemgroup">
 <div class="menuitem">
-<a title="" href="http://gump.apache.org/">Apache Gump</a>
+<a href="http://gump.apache.org/">Apache Gump</a>
 </div>
 <div class="menuitem">
-<a title="" href="http://cocoon.apache.org/">Apache Cocoon</a>
+<a href="http://cocoon.apache.org/">Apache Cocoon</a>
 </div>
 <div class="menuitem">
-<a title="" href="http://lenya.apache.org/">Apache Lenya</a>
+<a href="http://lenya.apache.org/">Apache Lenya</a>
 </div>
 <div class="menuitem">
-<a title="" href="http://xml.apache.org/">Apache XML</a>
-</div>
-<div class="menuitem">
-<a title="" href="http://www.apache.org/~vgritsenko/stats/">Statistics</a>
+<a href="http://xml.apache.org/">Apache XML</a>
 </div>
 </div>
 <div id="credit">
 <hr>
     This is documentation for current release v0.7
-   (<a href="http://forrest.apache.org/docs.html">More</a> ...)</div>
+   (<a href="http://forrest.apache.org/docs.html">More</a>)</div>
 <div id="roundbottom">
 <img style="display: none" class="corner" height="15" width="15" alt="" src="skin/images/rc-b-l-15-1body-2menu-3menu.png"></div>
 <!--+
@@ -178,7 +175,7 @@
 <h1>Who we are</h1>
 <div id="motd-area">
     This is documentation for current release v0.7
-   (<a href="http://forrest.apache.org/docs.html">More</a> ...)</div>
+   (<a href="http://forrest.apache.org/docs.html">More</a>)</div>
 <div id="minitoc-area">
 <ul class="minitoc">
 <li>
