--- a/index.html
+++ b/index.html
@@ -33,10 +33,15 @@ Please note that this HTML file was _not_ created by Forrest.
    <hr />
 
    <h2>What is this?</h2>
-   <p>Apache Forrest is an XML standards-oriented documentation framework
-     based upon Apache Cocoon, providing XSLT stylesheets and schemas,
-     images and other resources. Forrest uses these to render the source
-     content into a website via command-line, robot, or dynamic application.
+   <p>
+     Apache Forrest is a standards-based documentation framework
+     which uses Apache Cocoon. Forrest emphasises separation of
+     presentation and content, using a plugin architecture to
+     transform and aggregate various input sources into various
+     output formats. This creates a unified document collection
+     that can either be used as a dynamic application, or generated
+     at the command-line, or generated and deployed with an automated
+     publishing application.
    </p>
 
    <h2>What do I do now?</h2>
